# ninjasquad

./: .env.example  CLAUDE.md  DISTRIBUTED_ARCHITECTURE_PLAN.md  LOCAL_TEST_MODE.md  README.md  SETUP_OPENAI.md  create-icon.cjs  index.html  kill-ninja-processes.sh  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  index.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: browser-launcher.ts  claude-agent-service.ts  opencode-tui.js  package-lock.json  package.json  sdk-server.js  slack-service.js  slack-service.ts  start-claude-agent-service.sh
src-tauri/src/: lib.rs  main.rs  test_helpers.rs
src-tauri/src-tauri/icons/: icon.icns
src-tauri/src/claude/: manager.rs  mod.rs  service.rs  types.rs
src-tauri/src/database/: conversation.rs  mod.rs  schema.rs
src-tauri/src/opencode/: api_client.rs  mod.rs  process_manager.rs  service.rs  types.rs
src-tauri/src/plugins/: claude_code.rs  manager.rs  mod.rs  opencode.rs  sessions.rs  types.rs
src-tauri/src/projects/: manager.rs  mod.rs  types.rs
src-tauri/src/pty/: manager.rs  mod.rs  types.rs
src-tauri/src/queue/: client.rs  local_test.rs  mod.rs  types.rs  worker.rs
src-tauri/src/session/: manager.rs  mod.rs  types.rs
src-tauri/src/slack/: mod.rs
src-tauri/src/tmux/: manager.rs  mod.rs  types.rs
src-tauri/src/wezterm/: controller.rs  mirror.rs  mod.rs  types.rs
src/api/: ollama.ts  sensei.ts
src/api/ai/: process-terminal.ts
src/components/: AdminPage.tsx  Dashboard.tsx  DevServerLauncher.tsx  DistributedTest.tsx  LinearPage.tsx  ModeToggle.tsx  PluginSelector.tsx  PluginTabBar.tsx  ProcessManager.tsx  ProjectSidebar.tsx  ProjectView.tsx  Projects.tsx  RetroUIShowcase.tsx  SDKTest.tsx  SenseiPanel.tsx  SenseiSettings.tsx  ServerCard.test.tsx  ServerCard.tsx  ServerControl.tsx  SessionDetails.tsx  SessionView.tsx  Sidebar.tsx  SlackSettings.tsx  TaskDistribution.tsx  Terminal.tsx  TerminalView.test.tsx  TerminalView.tsx  TmuxExperiment.tsx  TopNav.tsx  WezTerminal.tsx
src/components/icons/: ClaudeIcon.tsx
src/components/plugins/: ClaudeAgentDirectUI.tsx  ClaudeAgentMultiSession.tsx  ClaudeAgentTabBar.tsx  (+3 more)
src/hooks/: useClaudeAgentSessions.ts  usePluginInstances.ts  useSenseiNotifications.ts  useSenseiSession.ts
src/plugins/: claude-agent-direct.tsx  claude-code.tsx  opencode.tsx
src/services/: ApiKeyService.ts  ClaudeAgentSDKService.ts  ClaudeAgentService.ts  ClaudeCodeSDKService.ts  ConversationHistoryService.ts  DesktopNotificationService.ts  EventBus.ts  LinearService.ts  LinearSyncService.ts  OllamaService.ts  OpenCodeSDKService.ts  OpenCodeService.test.ts  OpenCodeService.ts  PluginService.ts  PluginSessionService.ts  ProjectsService.ts  SenseiService.ts  SessionManager.test.ts  SessionManager.ts  SlackService.ts
src/styles/: sensei-animations.css
src/types/: claude-agent-sdk.ts  claude-agent-session.ts  global.d.ts  index.ts  linear.ts  plugin-instance.ts  plugin.ts  project.ts
src/utils/: packageManager.ts
(+11 files in other folders)
