[package]
name = "ninjasquad"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ninjasquad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
eventsource-client = "0.13"
futures = "0.3"
rand = "0.8"
portable-pty = "0.8"
rusqlite = { version = "0.32", features = ["bundled", "serde_json", "chrono"] }
hostname = "0.4"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"

[features]
default = ["tauri-app"]
tauri-app = ["tauri", "tauri-plugin-opener", "tauri-plugin-dialog", "tauri-plugin-notification", "tauri-plugin-fs", "tauri-build"]
